--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -127,7 +127,7 @@
 				</div>
 			</div>
 
-		<div class="profile__modal profile__modalInfo">
+		<div class="profile__modal profile__modalInfo custom-scroll">
 				<button class="box__close">
 					<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M1 1L31 31M31 1L1.53571 30.4643" stroke-width="1" stroke="var(--c10one)" />
