--- a/party/templates/party/redesign/template_svg/nopic_party.html
+++ b/party/templates/party/redesign/template_svg/nopic_party.html
@@ -1,5 +1,7 @@
 <svg
+   style="{{ style }}"
    class="{{ classes }}"
+   onclick="window.location.href = '{{ addition }}/{{ argument }}/'"
    width="300"
    height="300"
    viewBox="0 0 300 300"
