--- a/player/templates/player/redesign/menu.html
+++ b/player/templates/player/redesign/menu.html
@@ -174,7 +174,7 @@
 		<li class="nav__item nav__item--flex">
 			<div class="nav__item-flex">
 
-				<a class="nav__item-link" onclick="navigator.clipboard.writeText(window.location.href)" rel="noopener noreferrer">
+				<a class="nav__item-link" onclick="navigator.clipboard.writeText(window.location.href)" rel="noopener noreferrer" style="cursor: pointer">
 
 					<svg width="30" height="30" viewBox="0 0 30 30" fill="none" version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 					  <defs id="defs1"></defs>
