--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -9263,7 +9263,7 @@ p.overview__love-stat-timer {
 	max-width: 336rem;
 }
 
-.rewards__item > img {
+.rewards__item > img, svg {
 	flex-shrink: 0;
 	display: block;
 	width: 34rem;
