--- a/player/templates/player/redesign/customization/border_select.html
+++ b/player/templates/player/redesign/customization/border_select.html
@@ -7,7 +7,7 @@
 {% load tz %}
 {% block content %}
 <section class="avabord custom-scroll">
-    <h1 class="avabord__title ct__page-title">Выбор рамок аватара</h1>
+    <h1 class="avabord__title ct__page-title">{% trans 'Выбор рамок аватара' context "border_select" %}</h1>
     <ul class="avabord__gridFly avabord__grid--noborder">
         <li>
             <button class='avabord__flyButton {% if not borders or not used %}active{% endif %}' data-id="0">
