--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -519,7 +519,7 @@
 					</div>
 				</div>
 				<div class="btn-r-wrapper">
-					<button type="button" class="btn btn-default back-crop-js" data-dismiss="modal">{% trans 'Отмена' %}</button>
+					<button type="button" class="btn btn-default back-crop-js" data-dismiss="modal">{% trans 'Отмена' context "profile" %}</button>
 					<button type="button" class="btn btn-primary js-crop-and-upload">{% trans 'Загрузить' %}{% if player.image %}, -100 G{% endif %}</button>
 				</div>
 			</div>
@@ -650,7 +650,7 @@
 						<path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
 					</g>
 				</svg>
-				<span>{% trans 'сохранить' %}</span>
+				<span>{% trans 'сохранить' context "profile" %}</span>
 			</button>
 		</form>
 	</div>
