--- a/state/templates/state/redesign/set_mandate.html
+++ b/state/templates/state/redesign/set_mandate.html
@@ -186,7 +186,7 @@ jQuery(document).ready(function ($) {
                         <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"></path>
                       </g>
                     </svg>
-                    <span>produce</span>
+                    <span>{% trans 'выдать' context "set_mandate" %}</span>
                 </button>
             </form>
         </div>
